update page about

--- a/index.html
+++ b/index.html
@@ -32,29 +32,60 @@
     </nav>
 
     <main class="container">
+
         <section class="home" id="home">
+            <div class="aboutAlert">
 
-            <img src="./1.jpg" alt="" class="heroImage">
+                Selamat datang di web sederhana saya ini
+                <span class="material-icons alertClose" onclick="hideaboutAlert()"> close </span>
 
-            <h1 class="heroText">
-                <span style="color: rgb(0, 26, 255);">WEB</span>
-                PROFILE <br /> <span style="font-size: 12rem;">MIDHAT</span>
+            </div>
 
-            </h1>
+            <div class="home_content">
 
+                <img src="./1.jpg" alt="" class="heroImage">
 
+                <h1 class="heroText">
+                    <span style="color: rgb(0, 26, 255);">WEB</span>
+                    PROFILE <br /> <span style="font-size: 12rem;">MIDHAT</span>
 
-
-
+                </h1>
+            </div>
         </section>
         <section class="about" id="about">
 
-            <div class="aboutAlert">
-                Selamat datang di web sederhana saya ini
-                <span class="material-icons alertClose" onclick="hideaboutAlert()"> close </span>
+            <div class="about_box1 box">
+
+            </div>
+            <div class="about_box2 box">
+                <h3>Ini cerita saya</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus reprehenderit in numquam nemo
+                    sequi quos fuga, totam maiores unde officia quidem. Consectetur atque ipsa mollitia officiis
+                    corrupti, consequuntur enim impedit!
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis iure consequuntur libero
+                    perferendis excepturi corporis amet maxime corrupti doloremque, totam tempore temporibus provident,
+                    cum minima? Est aperiam dignissimos enim perferendis.
+                </p>
+            </div>
+            <div class="about_box3 box">
+                <h3>Ini sejarah saya</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus reprehenderit in numquam nemo
+                    sequi quos fuga, totam maiores unde officia quidem. Consectetur atque ipsa mollitia officiis
+                    corrupti, consequuntur enim impedit!
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis iure consequuntur libero
+                    perferendis excepturi corporis amet maxime corrupti doloremque, totam tempore temporibus provident,
+                    cum minima? Est aperiam dignissimos enim perferendis.
+            </div>
+            <div class="about_box4 box">
+
             </div>
 
-            about
 
         </section>
         <section class="contact" id="contact">contact</section>
